@@ -37,6 +37,45 @@
     </div>
 </form>
 
+<h1>Oversigt</h1>
+<fieldset class="module aligned ">
+<table style="width: 100%;">
+
+<tr class="form-row type">
+    <th>Linje navn</th>
+    <th>Overbetalt</th>
+    <th>Betalt</th>
+    <th>Delvist betalt</th>
+    <th>Ikke betalt</th>
+    <th>Total</th>
+</tr>
+
+{% for line_group in line_groups %}
+
+<tr class="form-row type line_group">
+    <td>{{line_group.name}}</td>
+    <td>{{line_group.overpaid|length}} ({{line_group.overpaid_total}},-)</td>
+    <td>{{line_group.paid|length}} ({{line_group.paid_total}},-)</td>
+    <td>{{line_group.partial|length}} ({{line_group.partial_total}},-)</td>
+    <td>{{line_group.unpaid|length}} ({{line_group.unpaid_total}},-)</td>
+    <td>{{line_group.lines|length}} ({{line_group.total}},-)</td>
+</tr>
+
+{% endfor %}
+
+<tr class="form-row type line_group">
+    <td><b>Total</b></td>
+    <td><b>({{total.overpaid}},-)</b></td>
+    <td><b>({{total.paid}},-)</b></td>
+    <td><b>({{total.partial}},-)</b></td>
+    <td><b>({{total.unpaid}},-)</b></td>
+    <td><b>({{total.total}},-)</b></td>
+</tr>
+
+</table>
+</fieldset>
+
+<h1>Detaljeret opgørelse</h1>
 <fieldset class="module aligned ">
 <table style="width: 100%;">
 
@@ -77,9 +116,4 @@
 {% endfor %}
 </table>
 </fieldset>
-
-
-<div class="form-row type  ">
-<div>
-</div></div>
 {% endblock %}
